[package]
name = "bigfactorial"
description = "Precalculated compile-time factorial macro for numbers upto 99."
license = "MIT"
version = "0.1.1"
repository = "https://github.com/littledivy/bigfactorial"
authors = ["littledivy <dj.srivastava23@gmail.com>"]
edition = "2018"

[dev-dependencies]
num-bigint = "0.3"